Переход на 4 архитектуру